# term-rewriting

./: .gitignore  Changelog  LICENSE  README.md  Setup.lhs  rewriting.cabal  term-rewriting.cabal
src/Data/: Multiset.hs
src/Data/Rewriting/: Axiom.hs  Context.hs  CriticalPair.hs  Pos.hs  Problem.hs  Rule.hs  Rules.hs  Signature.hs  Substitution.hs  Term.hs  Todo.hs  Utils.hs
src/Data/Rewriting/Axiom/: Ops.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Context/: Ops.hs  Type.hs
src/Data/Rewriting/CriticalPair/: Ops.hs  Type.hs
src/Data/Rewriting/Problem/: Parse.hs  Pretty.hs  Type.hs
src/Data/Rewriting/Rule/: Ops.hs  Pretty.hs  Props.hs  Type.hs
src/Data/Rewriting/Rules/: Confluent.hs  Ops.hs  Rewrite.hs
src/Data/Rewriting/Substitution/: Match.hs  Ops.hs  Parse.hs  Pretty.hs  Type.hs  Unify.hs
src/Data/Rewriting/Term/: Ops.hs  Parse.hs  Pretty.hs  Props.hs  Type.hs
src/Data/Rewriting/Utils/: Either.hs  Parse.hs
test/: Arbitrary.hs  CriticalPair.hs  Main.hs  Pos.hs  README  Rule.hs  Samples.hs  Substitution.hs  Term.hs
