name:          term-rewriting
version:       0.0
stability:     experimental
author:        Martin Avanzini,
               Bertram Felgenhauer,
               Georg Moser,
               Andreas Schnabel,
               Christian Sternagel
maintainer:    
license:       LGPL
license-file:  COPYING.LESSER
category:      Logic
synopsis:      Term Rewriting Library
description:   
  Yet Another  Term Rewriting Library
build-type:    Simple
cabal-version: >= 1.6

library
    hs-source-dirs:
        src
    exposed-modules:
        Data.Rewriting.Term
        Data.Rewriting.Term.Type
        Data.Rewriting.Term.Parse
        Data.Rewriting.Term.Props
        Data.Rewriting.Term.Pretty
        Data.Rewriting.Term.Ops 
        Data.Rewriting.Pos
        Data.Rewriting.Problem
        Data.Rewriting.Problem.Type
        Data.Rewriting.Problem.Parse
        Data.Rewriting.Problem.Pretty
        Data.Rewriting.Rule
        Data.Rewriting.Rule.Type
        Data.Rewriting.Rule.Pretty
        Data.Rewriting.Rule.Props
        Data.Rewriting.Substitution
        Data.Rewriting.Substitution.Type
        Data.Rewriting.Substitution.Parse
        Data.Rewriting.Substitution.Ops
        Data.Rewriting.Substitution.Pretty
        Data.Rewriting.Substitution.Match
        Data.Rewriting.Substitution.Unify
        Data.Rewriting.Rules
        Data.Rewriting.Rules.Rewrite
        Data.Rewriting.Context.Type
        Data.Rewriting.Context.Ops
        Data.Rewriting.CriticalPair
        Data.Rewriting.CriticalPair.Type
        Data.Rewriting.CriticalPair.Ops
    other-modules:
        Data.Rewriting.Utils
        Data.Rewriting.Utils.Parse
    build-depends:
        containers >= 0.3 && < 0.5,
        multiset >= 0.2 && < 0.3,
        parsec >= 3 && < 3.2,
        union-find-array >= 0.1 && < 0.2,
        array >= 0.3 && < 0.4,
        ansi-wl-pprint >= 0.6 && < 0.7,
        mtl >= 1.1 && < 2.1,
        base >= 4 && < 5
    extensions:
        TypeSynonymInstances
        BangPatterns
